# odroid-go-multi-firmware

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  mkimg.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.s3  tile.raw
components/ugui/: ugui.h
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  display.c  display.h  input.c  input.h  main.c  odroid_display.c  odroid_display.h  odroid_sdcard.c  odroid_sdcard.h  sdcard.c  sdcard.h  target.h
main/ugui/: ugui.c
tools/: mkfw.py  mkimg.py  pack.py
tools/mkimg/: pack.sh
tools/patches/: esp-idf-partition-patch.diff  esp-idf-sdcard-patch.diff
