set(COMPONENT_SRCDIRS ". ugui")
set(COMPONENT_ADD_INCLUDEDIRS ".")
register_component()
component_compile_options(-DPROJECT_VER="${PROJECT_VER}")
option(ESPLAY_S3 "Esplay S3 hardware" ON)
message(${ESPLAY_S3})
if(ESPLAY_S3)
    message("selected hardware" ${ESPLAY_S3})
    add_definitions(-DTARGET_ESPLAY_S3)
endif()